--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <i class="fab fa-telegram-plane mr-2"></i> टेलीग्राम Join करें
                 </a>
                 <!-- LINK: Contact Page Link -->
-                <a href="pages/contact.html" class="bg-green-700 border border-green-500 text-white px-6 py-3 rounded-full font-bold hover:bg-green-800 transition">
+                <a href="pages_contact.html" class="bg-green-700 border border-green-500 text-white px-6 py-3 rounded-full font-bold hover:bg-green-800 transition">
                     संपर्क करें
                 </a>
             </div>
@@ -338,9 +338,9 @@
             <div>
                 <h4 class="text-white font-bold mb-4">महत्वपूर्ण लिंक</h4>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="pages/privacy.html" class="hover:text-green-400">Privacy Policy</a></li>
-                    <li><a href="pages/terms.html" class="hover:text-green-400">Terms of Use</a></li>
-                    <li><a href="pages/about.html" class="hover:text-green-400">About Us</a></li>
+                    <li><a href="pages_privacy.html" class="hover:text-green-400">Privacy Policy</a></li>
+                    <li><a href="pages_terms.html" class="hover:text-green-400">Terms of Use</a></li>
+                    <li><a href="pages_about.html" class="hover:text-green-400">About Us</a></li>
                 </ul>
             </div>
             <div>
